# stock_analysis_gas_v4_audit

./: .dockerignore  .env.example  .gitignore  Dockerfile  Executive_Red_Team_SPEC_SWS_v3_to_v31.docx  PLAN-Produs-Complet-v3.1.md  README.md  SPEC-SWS-Snowflake-Engine-v3.1-Model-Pack.docx  SPEC-SWS-Snowflake-Engine-v3.1.md  acme_synthetic_report.md  company_report.md  dashboard.Dockerfile  docker-compose.yml  portfolio_report.md  pyproject.toml  run_demo.py
config/: assumptions.yaml  audit_policies.yaml  legal_scope.yaml  reason_code_dictionary.yaml  sensitivity.yaml  source_registry.yaml
dashboard/: __init__.py  api_client.py  app.py  config.py  streamlit_compat.py
deploy/: README.md  production_checklist.md
docs/: audit_engine_principles.md  audit_methodology.md  business_risk_signals.md  explainability_reason_codes.md  investment_memo_generator.md  live_market_data_runbook.md  local_operator_runbook.md  manual_override_workflow.md  portfolio_audit.md  product_strategy_v4.md  rates_erp_identifier_master.md  rates_fx_runbook.md  real_averages_runbook.md  real_dashboard_bootstrap_runbook.md  real_data_population_runbook.md  real_source_population_checklist.md  release_v4_mvp.md  research_company_orchestrator.md  run_comparison.md  sec_mapping.md  sensitivity_valuation_range.md  thesis_decision_journal.md  watchlist_audit.md  workflow_dashboard_hub.md  yfinance_capability_matrix.md
examples/: demo_output.json
legal/: NOTICE.md
ops/: backup.sh  daily_refresh.sh  eod_refresh_real.sh  monitoring.py  monitoring.sh  scheduler.md  security.md
schemas/: output_schema.json
templates/: bank_input_template.json  bank_manual_override_template.json  company_input_template.json  manual_override_template.json  reit_input_template.json  reit_manual_override_template.json
tests/: conftest.py
validation/: validation_report_v3.1_BCDE_operational_step.md  validation_report_v3.1_FGH_release_deploy_e2e.md  validation_report_v3.1_api_step2.md  validation_report_v3.1_ci_deploy_final.md  validation_report_v3.1_dashboard_step3.md  validation_report_v3.1_faza4.md  validation_report_v3.1_final_remaining_controls.md  validation_report_v3.1_github_audit_final.md  validation_report_v3.1_github_audit_stage1.md  (+17 more)
(+378 files in other folders)
